View does not scroll to the end of the text in some cases (text cut off)
The view does not scroll to the end, even if the cursor is at the last line. If I type a new line at the end, then the view goes there, so I sometimes have to add a new line at the end of the file and erase it to be able to see the entire file.
This does not always happen, but it seems to be consistent when opening the same files, maybe depending on the number of lines. (I'm not using text wrapping)
This usually does not happen when I open a file from inside gedit by clicking Open and selecting a file, but happens when the file is opened from the file manager.
I'm using gedit 3.28.1, gnome 3.28.2, gtk+ 3.22.30, arch linux
I have this problem for a long time now, so it's probably not specific to this version.
In the attached screenshot, the view does not go further than you can see. (there are 99 lines in this document)