tab: tune number of milliseconds for the scroll timeout

See https://gitlab.gnome.org/GNOME/gedit/-/issues/42

It works for small files (100 lines with all small lines).
Works for large files (100k lines with all small lines).
Works for medium-sized file with long lines.

So, good enough for now.

(cherry picked from commit 0476a1d44e6c83391cad102747f92ceb3fd1d8d7)